tests/snapshots/e2e__e2e_dataset_4_gsma.snap
---
source: tests/e2e.rs
expression: normalize(&output)
---
1 Introduction
1.1 Overview
The main aim of the GSMA Remote SIM Provisioning specifications [2] & [3] is to provide
solution for the Remote SIM Provisioning of Consumer Devices. The adoption of this
technical solution will provide the basis for global interoperability between different Operator
deployment scenarios, for example network equipment (e.g. Subscription Manager Data
Preparation (SM-DP+)) and various eUICC platforms.
This Test Plan provides a set of test cases to be used for testing the eUICC implementations
related to the provisioning system specifications documents [2] & [3]. This document offers
an unified test strategy for checking the eUICC component.
2020-03-16
1.6 Conventions
The key words "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", and "MAY" in this
document SHALL be interpreted as described in RFC 2119 [20].
# Test Plan
## Test Case: 4.2.2.2.1 TC_eUICC_ES6.UpdateMetadata
**Requirement**: XXX100
**Item**: 1
## Description
Throughout all the ES6.UpdateMetadata test cases, SMS is used as the secure OTA channel.
## General Initial Conditions
| **Entity** | **Description of the general initial condition** |
| ------------- | --------- |
| eUICC | [The PROFILE_OPERATIONAL1 is Enabled., The PROFILE_OPERATIONAL2 is Enabled.] |
## Test Sequence 1 Test Sequence #01 Nominal: Unset PPR1
This test case verifies that the eUICC correctly processes an ES6.UpdateMetadata command to unset PPR1
when the profile is in the operational state and PPR1 is currently set.
| **Step Number** | **Action** | **Expected Result** | **Expected Output** |
| --------------- | ---------- | ------------------- | --------------------|
| 1 | MTD_SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; MTD_STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE)) | SW=0x91XX | This operation was successful. |
| 2 | Fetch 'XX' | MTD_CHECK_SMS_POR(0x9000) | This operation was successful. |
## Test Sequence 2 Test Sequence #02 Nominal: Unset PPPR2 and update icon
The purpose of this test is to verify that the MNO can unset PPR2 and update the icon and
icon type values from a Profile.
| **Step Number** | **Action** | **Expected Result** | **Expected Output** |
| --------------- | ---------- | ------------------- | --------------------|
| 1 | MTD_SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; MTD_STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE)) | SW=0x91XX | This operation was successful. |
| 2 | Fetch 'XX' | MTD_CHECK_SMS_POR(0x9000) | This operation was successful. |
## Test Case: 4.2.2.3 ANOTHER ONE
**Requirement**: XXX100
**Item**: 1
## Description
Throughout all the ES6.UpdateMetadata test cases, SMS is used as the secure OTA channel.
## General Initial Conditions
| **Entity** | **Description of the general initial condition** |
| ------------- | --------- |
| eUICC | [The PROFILE_OPERATIONAL1 is Enabled., The PROFILE_OPERATIONAL2 is Enabled.] |
## Test Sequence 1 Test Sequence #01 Nominal: Unset PPR1
This test case verifies that the eUICC correctly processes an ES6.UpdateMetadata command to unset PPR1
when the profile is in the operational state and PPR1 is currently set.
| **Step Number** | **Action** | **Expected Result** | **Expected Output** |
| --------------- | ---------- | ------------------- | --------------------|
| 1 | MTD_SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; MTD_STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE)) | SW=0x91XX | This operation was successful. |
| 2 | Fetch 'XX' | MTD_CHECK_SMS_POR(0x9000) | This operation was successful. |
## Test Sequence 2 Test Sequence #02 Nominal: Unset PPPR2 and update icon
The purpose of this test is to verify that the MNO can unset PPR2 and update the icon and
icon type values from a Profile.
| **Step Number** | **Action** | **Expected Result** | **Expected Output** |
| --------------- | ---------- | ------------------- | --------------------|
| 1 | MTD_SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; MTD_STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE)) | SW=0x91XX | This operation was successful. |
| 2 | Fetch 'XX' | MTD_CHECK_SMS_POR(0x9000) | This operation was successful. |
(C) GSMA 2024. All rights reserved.
