tests/snapshots/e2e__e2e_dataset_4_gsma_target_debug.snap
---
source: tests/e2e.rs
expression: normalize(&output)
---
1 Introduction
1.1 Overview
The main aim of the GSMA Remote SIM Provisioning specifications [2] & [3] is to provide
solution for the Remote SIM Provisioning of Consumer Devices. The adoption of this
technical solution will provide the basis for global interoperability between different Operator
deployment scenarios, for example network equipment (e.g. Subscription Manager Data
Preparation (SM-DP+)) and various eUICC platforms.
This Test Plan provides a set of test cases to be used for testing the eUICC implementations
related to the provisioning system specifications documents [2] & [3]. This document offers
an unified test strategy for checking the eUICC component.
2020-03-16
1.6 Conventions
The key words "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", and "MAY" in this
document SHALL be interpreted as described in RFC 2119 [20].
# Test Plan
## Analysis: 4.2.2.4 AN_eUICC_Performance_Analysis
**Requirement**: XXX200
## Description
Analysis of eUICC performance under various load conditions to verify system requirements.
## Method
Statistical analysis and mathematical modeling
## Calculations
### Maximum throughput
**Formula**: T_max = (N * S) / (L + O)
**Parameters**:
- **L**: Latency per operation (sec)
- **N**: Number of parallel channels
- **O**: Overhead factor
- **S**: Signal processing speed (ops/sec)
### Response time percentile
**Formula**: P95 = μ + (1.645 * σ)
**Parameters**:
- **μ**: Mean response time
- **σ**: Standard deviation
## Models
| **Model Name** | **Type** | **Description** |
| -------------- | -------- | --------------- |
| Load balancing model | Queuing theory | M/M/c queue model for analyzing multi-channel processing |
| Resource utilization model | Statistical | Time-series analysis of CPU and memory utilization patterns |
| Failure prediction model | Probabilistic | Poisson distribution for estimating failure rates under stress |
## Acceptance Criteria
- Maximum throughput must exceed 1000 operations per second
- 95th percentile response time must be below 200ms
- System must maintain stability under 80% resource utilization
- Predicted failure rate must be less than 0.01% under normal load
## Demonstration: 4.2.2.5 DM_eUICC_Profile_Management
**Requirement**: XXX300
## Description
Demonstration of profile download, installation, and lifecycle management operations on a live eUICC device.
## Procedure
1. Power on the device with eUICC installed
2. Establish secure connection to SM-DP+ server
3. Initiate profile download using activation code
4. Monitor profile installation progress
5. Verify profile is listed in available profiles
6. Enable the newly installed profile
7. Perform basic connectivity test
8. Disable profile and switch to another profile
9. Delete the test profile
10. Verify profile removal from eUICC
## Observations
- Profile download initiated successfully with activation code scan
- Installation progress displayed real-time status updates
- Profile appeared in device settings within 30 seconds of installation
- Network connectivity established immediately after profile enable
- Profile switching completed without device reboot
- Profile deletion removed all associated credentials and data
- No residual files or configurations remained after deletion
## Acceptance Criteria
- Profile download and installation must complete within 2 minutes
- Profile must be usable for network connectivity immediately after enable
- Profile switching must occur without requiring device restart
- Profile deletion must completely remove all profile data
- All operations must be performed without user intervention beyond initial trigger
## Inspection: 4.2.2.6 IN_eUICC_Security_Compliance
**Requirement**: XXX400
## Description
Inspection of eUICC implementation to verify compliance with security requirements and cryptographic standards.
## Inspection Method
Code review, configuration audit, and documentation verification
## Checklist
- Verify cryptographic algorithms comply with GSMA SGP.22 specification
- Confirm secure channel protocol implementation follows TLS 1.2 or higher
- Check certificate chain validation includes proper root CA verification
- Validate private keys are stored in secure element with no external access
- Review authentication mechanisms for SM-DP+ and SM-DS communication
- Inspect error handling to ensure no sensitive information leakage
- Verify secure boot implementation and firmware signature validation
- Check memory protection mechanisms prevent unauthorized access
- Confirm audit logging captures all security-relevant events
- Review source code for common vulnerabilities (buffer overflow, injection, etc.)
- Validate random number generator meets cryptographic quality standards
- Check compliance with side-channel attack mitigation requirements
## Acceptance Criteria
- All cryptographic algorithms must be from approved list in GSMA specifications
- No cryptographic keys shall be stored in plaintext or insufficiently protected memory
- Certificate validation must reject expired, revoked, or untrusted certificates
- All security-critical operations must be logged with timestamp and result
- Code review must reveal no critical or high-severity security vulnerabilities
- Implementation must pass static analysis security scanning tools
## Test Case: 4.2.2.2.1 TC_eUICC_ES6.UpdateMetadata
**Requirement**: XXX100
**Item**: 1
## Description
Throughout all the ES6.UpdateMetadata test cases, SMS is used as the secure OTA channel.
## General Initial Conditions
| **Entity** | **Description of the general initial condition** |
| ------------- | --------- |
| eUICC | [The PROFILE_OPERATIONAL1 is Enabled., The PROFILE_OPERATIONAL2 is Enabled.] |
## Test Sequence 1 Test Sequence #01 Nominal: Unset PPR1
This test case verifies that the eUICC correctly processes an ES6.UpdateMetadata command to unset PPR1
when the profile is in the operational state and PPR1 is currently set.
| **Step Number** | **Action** | **Expected Result** | **Expected Output** |
| --------------- | ---------- | ------------------- | --------------------|
| 1 | MTD_SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; MTD_STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE)) | SW=0x91XX | This operation was successful. |
| 2 | Fetch 'XX' | MTD_CHECK_SMS_POR(0x9000) | This operation was successful. |
## Test Sequence 2 Test Sequence #02 Nominal: Unset PPPR2 and update icon
The purpose of this test is to verify that the MNO can unset PPR2 and update the icon and
icon type values from a Profile.
| **Step Number** | **Action** | **Expected Result** | **Expected Output** |
| --------------- | ---------- | ------------------- | --------------------|
| 1 | MTD_SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; MTD_STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE)) | SW=0x91XX | This operation was successful. |
| 2 | Fetch 'XX' | MTD_CHECK_SMS_POR(0x9000) | This operation was successful. |
## Test Case: 4.2.2.3 ANOTHER ONE
**Requirement**: XXX100
**Item**: 1
## Description
Throughout all the ES6.UpdateMetadata test cases, SMS is used as the secure OTA channel.
## General Initial Conditions
| **Entity** | **Description of the general initial condition** |
| ------------- | --------- |
| eUICC | [The PROFILE_OPERATIONAL1 is Enabled., The PROFILE_OPERATIONAL2 is Enabled.] |
## Test Sequence 1 Test Sequence #01 Nominal: Unset PPR1
This test case verifies that the eUICC correctly processes an ES6.UpdateMetadata command to unset PPR1
when the profile is in the operational state and PPR1 is currently set.
| **Step Number** | **Action** | **Expected Result** | **Expected Output** |
| --------------- | ---------- | ------------------- | --------------------|
| 1 | MTD_SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; MTD_STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE)) | SW=0x91XX | This operation was successful. |
| 2 | Fetch 'XX' | MTD_CHECK_SMS_POR(0x9000) | This operation was successful. |
## Test Sequence 2 Test Sequence #02 Nominal: Unset PPPR2 and update icon
The purpose of this test is to verify that the MNO can unset PPR2 and update the icon and
icon type values from a Profile.
| **Step Number** | **Action** | **Expected Result** | **Expected Output** |
| --------------- | ---------- | ------------------- | --------------------|
| 1 | MTD_SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; MTD_STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE)) | SW=0x91XX | This operation was successful. |
| 2 | Fetch 'XX' | MTD_CHECK_SMS_POR(0x9000) | This operation was successful. |
(C) GSMA 2024. All rights reserved.
