tests/snapshots/e2e__e2e_dataset_gsma_multiple_by_type.snap
---
source: tests/e2e.rs
expression: "normalize(&output)"
---
## Analysis: AN.Filter.Test_02: Normalize Multiple Spaces
**Requirement**: REQ-FILTER-002
**Sanitized ID**:   AN.Filter.Test_02: Normalize Multiple Spaces  
## Description
Analysis case demonstrating replace_regex filter for normalizing   multiple   spaces   in requirements text, and strip filter for cleaning up field values. The replace_regex filter uses \\s+ pattern to collapse multiple whitespace characters into single spaces.
## Method
Statistical analysis    with   multiple    spaces    between    words   that   should    be    normalized.
## Calculations
### Power Consumption   Calculation
**Formula**: P = V * I
**Parameters**:
- **I**: Current in amperes
- **V**: Voltage in volts
### Efficiency   Ratio   Calculation
**Formula**: E = (P_out / P_in) * 100
**Parameters**:
- **P_in**: Input power in watts
- **P_out**: Output power in watts
## Models
| **Model Name** | **Type** | **Description** |
| -------------- | -------- | --------------- |
| Linear   Regression   Model | Statistical | This   model   uses    linear    regression   with   multiple    spaces   that    need    normalization. |
| Neural   Network | Machine Learning | Deep   learning    model   for    pattern    recognition   with    excessive    spacing. |
| Decision   Tree   Classifier | Classification | Tree-based   model   for    categorical    predictions   with    irregular    whitespace. |
## Acceptance Criteria
- The model accuracy must exceed 95%.
- Processing time should be less than 100ms.
- All edge cases must be handled correctly.
- Documentation must have normalized spacing.
## Analysis: 4.2.2.4 AN_eUICC_Performance_Analysis
**Requirement**: XXX200
**Sanitized ID**: 4.2.2.4 AN_eUICC_Performance_Analysis
## Description
Analysis of eUICC performance under various load conditions to verify system requirements.
## Method
Statistical analysis and mathematical modeling
## Calculations
### Maximum throughput
**Formula**: T_max = (N * S) / (L + O)
**Parameters**:
- **L**: Latency per operation (sec)
- **N**: Number of parallel channels
- **O**: Overhead factor
- **S**: Signal processing speed (ops/sec)
### Response time percentile
**Formula**: P95 = μ + (1.645 * σ)
**Parameters**:
- **μ**: Mean response time
- **σ**: Standard deviation
## Models
| **Model Name** | **Type** | **Description** |
| -------------- | -------- | --------------- |
| Load balancing model | Queuing theory | M/M/c queue model for analyzing multi-channel processing |
| Resource utilization model | Statistical | Time-series analysis of CPU and memory utilization patterns |
| Failure prediction model | Probabilistic | Poisson distribution for estimating failure rates under stress |
## Acceptance Criteria
- Maximum throughput must exceed 1000 operations per second
- 95th percentile response time must be below 200ms
- System must maintain stability under 80% resource utilization
- Predicted failure rate must be less than 0.01% under normal load
## Demonstration: Demo_Filter_Test_04_Prefix_Removal
**Requirement**: REQ-FILTER-004
**Clean ID**: Filter_Test_04_Prefix_Removal
## Description
Demonstration case showing the replace filter removing common prefixes (like "Demo_") from IDs to create cleaner display names, and replace_regex filter normalizing excessive whitespace in procedure descriptions.
## Procedure
Execute   the   demonstration    scenario   with   multiple   spaces    in   procedure    text   that    should    be    collapsed    to    single    spaces.
## Observations
- System responds correctly to all inputs.
- No unexpected behavior observed.
- Performance meets requirements.
- Filter processing does not impact execution time.
- Documentation output is clean and readable.
## Acceptance Criteria
- Demonstration completes without errors.
- All features work as expected.
- User feedback is positive.
- Output formatting meets quality standards.
- ID prefixes are properly removed.
## Demonstration: 4.2.2.5 DM_eUICC_Profile_Management
**Requirement**: XXX300
**Clean ID**: 4.2.2.5 DM_eUICC_Profile_Management
## Description
Demonstration of profile download, installation, and lifecycle management operations on a live eUICC device.
## Procedure
1. Power on the device with eUICC installed
2. Establish secure connection to SM-DP+ server
3. Initiate profile download using activation code
4. Monitor profile installation progress
5. Verify profile is listed in available profiles
6. Enable the newly installed profile
7. Perform basic connectivity test
8. Disable profile and switch to another profile
9. Delete the test profile
10. Verify profile removal from eUICC
## Observations
- Profile download initiated successfully with activation code scan
- Installation progress displayed real-time status updates
- Profile appeared in device settings within 30 seconds of installation
- Network connectivity established immediately after profile enable
- Profile switching completed without device reboot
- Profile deletion removed all associated credentials and data
- No residual files or configurations remained after deletion
## Acceptance Criteria
- Profile download and installation must complete within 2 minutes
- Profile must be usable for network connectivity immediately after enable
- Profile switching must occur without requiring device restart
- Profile deletion must completely remove all profile data
- All operations must be performed without user intervention beyond initial trigger
## Inspection: IN.Filter.Test.03: Replace & Normalize Special Chars
**Requirement**: REQ-FILTER-003
**Normalized ID**: --INFilterTest03-Replace--Normalize-Special-Chars--
## Description
Inspection case showing combined use of replace and replace_regex filters to normalize ID formats. First, the replace filter converts spaces to dashes, then replace_regex removes all non-alphanumeric characters except dashes, creating clean, filesystem-safe identifiers.
## Inspection Method
Visual inspection of code and documentation with   extra   whitespace   that   needs   normalization.
## Checklist
- Verify all functions are properly documented.
- Check for coding standard compliance.
- Ensure proper error handling is implemented.
- Validate input sanitization mechanisms.
- Confirm test IDs are properly formatted.
- Review whitespace handling in output.
## Acceptance Criteria
- All checklist items must be satisfied.
- No critical issues found during inspection.
- Code review comments addressed.
- Test identifiers follow naming conventions.
- Documentation formatting is consistent.
## Inspection: 4.2.2.6 IN_eUICC_Security_Compliance
**Requirement**: XXX400
**Normalized ID**: 4226-INeUICCSecurityCompliance
## Description
Inspection of eUICC implementation to verify compliance with security requirements and cryptographic standards.
## Inspection Method
Code review, configuration audit, and documentation verification
## Checklist
- Verify cryptographic algorithms comply with GSMA SGP.22 specification
- Confirm secure channel protocol implementation follows TLS 1.2 or higher
- Check certificate chain validation includes proper root CA verification
- Validate private keys are stored in secure element with no external access
- Review authentication mechanisms for SM-DP+ and SM-DS communication
- Inspect error handling to ensure no sensitive information leakage
- Verify secure boot implementation and firmware signature validation
- Check memory protection mechanisms prevent unauthorized access
- Confirm audit logging captures all security-relevant events
- Review source code for common vulnerabilities (buffer overflow, injection, etc.)
- Validate random number generator meets cryptographic quality standards
- Check compliance with side-channel attack mitigation requirements
## Acceptance Criteria
- All cryptographic algorithms must be from approved list in GSMA specifications
- No cryptographic keys shall be stored in plaintext or insufficiently protected memory
- Certificate validation must reject expired, revoked, or untrusted certificates
- All security-critical operations must be logged with timestamp and result
- Code review must reveal no critical or high-severity security vulnerabilities
- Implementation must pass static analysis security scanning tools
## Test Case: TC.Filter.Test-01: Strip & Sanitize IDs
**Requirement**: REQ-FILTER-001
**Item**: 1
**Sanitized Test ID**: __TC_Filter_Test_01__Strip___Sanitize_IDs__
## Description
This test case demonstrates the strip filter removing leading/trailing whitespace from test documentation, and the replace_regex filter sanitizing test IDs by converting special characters to underscores.
## General Initial Conditions
| **Entity** | **Description of the general initial condition** |
| ------------- | --------- |
| eUICC |   The test profile is loaded with extra whitespace.   |
| eUICC |   Initial state: eUICC is operational.   |
## Test Sequence 1 Nominal Flow: Whitespace Normalization Test
This sequence verifies that the system correctly processes commands
and the filters properly sanitize test IDs (converting dots, colons, 
and dashes to underscores) and normalize whitespace (stripping leading/trailing
spaces) in the generated test plan documentation.
### Initial Conditions for This Sequence
| **Entity** | **Description** |
| ---------- | --------------- |
| eUICC |   System is ready for testing.   |
| **Step Number** | **Action** | **Expected Result** | **Expected Output** |
| --------------- | ---------- | ------------------- | --------------------|
| 1 | SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; STORE_DATA_SCRIPT(#TEST_DATA, TRUE)) | SW=0x9000 | Operation completed successfully. |
| 2 | FETCH_RESPONSE('XX') | MTD_CHECK_SMS_POR(0x9000) | Response received successfully. |
| 3 | VERIFY_PROFILE_STATE(ENABLED) | Profile state verified | State matches expected value. |
## Test Case: 4.2.2.2.1 TC_eUICC_ES6.UpdateMetadata
**Requirement**: XXX100
**Item**: 1
**Sanitized Test ID**: 4_2_2_2_1_TC_eUICC_ES6_UpdateMetadata
## Description
Throughout all the ES6.UpdateMetadata test cases, SMS is used as the secure OTA channel.
## General Initial Conditions
| **Entity** | **Description of the general initial condition** |
| ------------- | --------- |
| eUICC | The profile The PROFILE_OPERATIONAL1 with #METADATA_WITH_PPRS_AND_ICON is loaded on the eUICC. |
## Test Sequence 1 Test Sequence #01 Nominal: Unset PPR1
This test case verifies that the eUICC correctly processes an ES6.UpdateMetadata command to unset PPR1
when the profile is in the operational state and PPR1 is currently set.
### Initial Conditions for This Sequence
| **Entity** | **Description** |
| ---------- | --------------- |
| eUICC | The PROFILE_OPERATIONAL3 is Enabled. |
| **Step Number** | **Action** | **Expected Result** | **Expected Output** |
| --------------- | ---------- | ------------------- | --------------------|
| 1 | SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE)) | SW=0x91XX | This operation was successful. |
| 2 | Fetch 'XX' | MTD_CHECK_SMS_POR(0x9000) | This operation was successful. |
## Test Sequence 2 Test Sequence #02 Nominal: Unset PPPR2 and update icon
The purpose of this test is to verify that the MNO can unset PPR2 and update the icon and
icon type values from a Profile.
### Initial Conditions for This Sequence
| **Entity** | **Description** |
| ---------- | --------------- |
| eUICC | The PROFILE_OPERATIONAL3 is Enabled. |
| **Step Number** | **Action** | **Expected Result** | **Expected Output** |
| --------------- | ---------- | ------------------- | --------------------|
| 1 | SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE)) | SW=0x91XX | This operation was successful. |
| 2 | Fetch 'XX' | MTD_CHECK_SMS_POR(0x9000) | This operation was successful. |
## Test Case: 4.2.2.3 ANOTHER ONE
**Requirement**: XXX100
**Item**: 1
**Sanitized Test ID**: 4_2_2_3_ANOTHER_ONE
## Description
Throughout all the ES6.UpdateMetadata test cases, SMS is used as the secure OTA channel.
## General Initial Conditions
| **Entity** | **Description of the general initial condition** |
| ------------- | --------- |
| eUICC | The profile The PROFILE_OPERATIONAL1 with #METADATA_WITH_PPRS_AND_ICON is loaded on the eUICC. |
## Test Sequence 1 Test Sequence #01 Nominal: Unset PPR1
This test case verifies that the eUICC correctly processes an ES6.UpdateMetadata command to unset PPR1
when the profile is in the operational state and PPR1 is currently set.
### Initial Conditions for This Sequence
| **Entity** | **Description** |
| ---------- | --------------- |
| eUICC | The PROFILE_OPERATIONAL3 is Enabled. |
| **Step Number** | **Action** | **Expected Result** | **Expected Output** |
| --------------- | ---------- | ------------------- | --------------------|
| 1 | SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE)) | SW=0x91XX | This operation was successful. |
| 2 | Fetch 'XX' | MTD_CHECK_SMS_POR(0x9000) | This operation was successful. |
## Test Sequence 2 Test Sequence #02 Nominal: Unset PPPR2 and update icon
The purpose of this test is to verify that the MNO can unset PPR2 and update the icon and
icon type values from a Profile.
### Initial Conditions for This Sequence
| **Entity** | **Description** |
| ---------- | --------------- |
| eUICC | The PROFILE_OPERATIONAL3 is Enabled. |
| **Step Number** | **Action** | **Expected Result** | **Expected Output** |
| --------------- | ---------- | ------------------- | --------------------|
| 1 | SENDS_SMS_PP([INSTALL_PERSO_RES_ISDP]; STORE_DATA_SCRIPT(#REMOVE_PPR1, FALSE)) | SW=0x91XX | This operation was successful. |
| 2 | Fetch 'XX' | MTD_CHECK_SMS_POR(0x9000) | This operation was successful. |
