tests/snapshots/e2e__e2e_input_data_asciidoc.snap
---
source: tests/e2e.rs
expression: normalize(&output_adoc)
---
= Introduction
== Overview
The main aim of the GSMA Remote SIM Provisioning specifications [2] & [3] is to provide
solution for the Remote SIM Provisioning of Consumer Devices. The adoption of this
technical solution will provide the basis for global interoperability between different Operator
deployment scenarios, for example network equipment (e.g. Subscription Manager Data
Preparation (SM-DP+)) and various eUICC platforms.
This Test Plan provides a set of test cases to be used for testing the eUICC implementations
related to the provisioning system specifications documents [2] & [3]. This document offers
an unified test strategy for checking the eUICC component.
2020-03-16
== Conventions
The key words "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", and "MAY" in this
document SHALL be interpreted as described in RFC 2119 [20].
= Test Plan
== Test Case: TEST_002 Failing Test Case
*Requirement*: TEST_REQ_002
*Item*: 2
*Sanitized Test ID*: TEST_002_Failing_Test_Case
=== Description
This test case validates error handling and failure scenarios.
=== General Initial Conditions
[cols="1,1", options="header"]
|===
| Entity
| Description of the general initial condition
| system
| The system is in a degraded state.
| system
| Error conditions are simulated.
|===
=== Test Sequence 1 Test Sequence #01 Error Handling
This test sequence verifies that the system properly handles
error conditions and returns appropriate error codes.
==== Initial Conditions for This Sequence
[cols="1,1", options="header"]
|===
| Entity
| Description
| system
| Error injection active.
|===
[cols="1,1,1,1", options="header"]
|===
| Step Number
| Action
| Expected Result
| Expected Output
| 1
| Trigger error condition
| ERROR_DETECTED
| Expected error was triggered.
| 2
| Verify error handling
| ERROR_HANDLED
| Error was handled correctly.
|===
=== Test Sequence 2 Test Sequence #02 Recovery
This test verifies that the system can recover from
the error condition and return to normal operation.
==== Initial Conditions for This Sequence
[cols="1,1", options="header"]
|===
| Entity
| Description
| system
| Error state is active.
|===
[cols="1,1,1,1", options="header"]
|===
| Step Number
| Action
| Expected Result
| Expected Output
| 1
| Attempt recovery
| RECOVERY_SUCCESS
| System recovered successfully.
|===
=== Test Sequence 3 Test Sequence #03 Validation After Recovery
This test validates that all systems are functional
after recovery from error state.
==== Initial Conditions for This Sequence
[cols="1,1", options="header"]
|===
| Entity
| Description
| system
| Recovery complete.
|===
[cols="1,1,1,1", options="header"]
|===
| Step Number
| Action
| Expected Result
| Expected Output
| 1
| Validate system state
| SYSTEM_HEALTHY
| System is operating normally.
|===
== Test Case: TEST_001 Passing Test Case
*Requirement*: TEST_REQ_001
*Item*: 1
*Sanitized Test ID*: TEST_001_Passing_Test_Case
=== Description
This is a passing test case that validates basic functionality.
=== General Initial Conditions
[cols="1,1", options="header"]
|===
| Entity
| Description of the general initial condition
| system
| The system is initialized and ready for testing.
| system
| All required components are available.
|===
=== Test Sequence 1 Test Sequence #01 Basic Operation
This test sequence verifies that the basic operation succeeds
under normal conditions with expected inputs.
==== Initial Conditions for This Sequence
[cols="1,1", options="header"]
|===
| Entity
| Description
| system
| System is in ready state.
|===
[cols="1,1,1,1", options="header"]
|===
| Step Number
| Action
| Expected Result
| Expected Output
| 1
| Initialize test data
| INIT_SUCCESS
| Test data initialized successfully.
| 2
| Execute main operation
| EXEC_SUCCESS
| Operation completed successfully.
|===
=== Test Sequence 2 Test Sequence #02 Validation
This test sequence validates that results are correct
and meet all requirements.
==== Initial Conditions for This Sequence
[cols="1,1", options="header"]
|===
| Entity
| Description
| system
| Previous sequence completed successfully.
|===
[cols="1,1,1,1", options="header"]
|===
| Step Number
| Action
| Expected Result
| Expected Output
| 1
| Validate results
| VALID_RESULT
| All validations passed.
|===
(C) GSMA 2024. All rights reserved.
